esto es la última vez que lo subo

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,8 @@
 target/*
 target/**
+.DS_Store
+web-app/WEB-INF/classes/*
+web-app/WEB-INF/classes/**
+web-app/WEB-INF/tld/*
+web-app/WEB-INF/tld/**
+.gitignore
